--- a/src/components/style/EntryMiniCard.scss
+++ b/src/components/style/EntryMiniCard.scss
@@ -106,13 +106,15 @@
       }
     }
   }
+  &>.brief {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    padding: 0.2em;
+  }
   &>.footer {
     font-size: 0.9em;
     line-height: 1.3em;
     text-align: right;
-    overflow: hidden;
-    white-space: nowrap;
-    text-overflow: ellipsis;
     color: #666;
     a {
       color: #666;
@@ -121,10 +123,18 @@
         text-decoration: underline;
       }
     }
-    & > .date {
-      display: inline;
+    &>.permalink {
+      display: inline-block;
+      max-width: 100%;
+      overflow: hidden;
+      vertical-align: middle;
+      text-overflow: ellipsis;
+    }
+    &>.date {
+      display: inline-block;
       margin-right: 0.35em;
       color: #666;
+      vertical-align: middle;
       &:after {
         content: '';
         display: inline-block;
@@ -142,6 +152,7 @@
     padding: 0;
     margin: 0.4em 0;
     list-style-type: none;
+    overflow: hidden;
     &>li {
       display: inline-block;
     }
