--- a/src/views/style/EntryView.scss
+++ b/src/views/style/EntryView.scss
@@ -31,7 +31,8 @@
     }
     &>.description {
       clear: both;
-      margin: 1.5em;
+      overflow: hidden;
+      margin: 0.5em 1.5em;
       h1, h2, h3, h4, h5, h6 {
         color: #333;
       }
